Update ViewController with the missing references to services